<resources>
    <string name="app_name">MiJardin</string>
    <string name="todo">TODO</string>
    <string name="titulo">Tu jardín</string>
    <string name="card1">Rosa azul</string>
    <string name="Card1">Imagen rosa azul</string>
    <string name="hortensia">Hortensia</string>
    <string name="card2">Card2</string>
    <string name="amapola">Amapola</string>
    <string name="card3">card3</string>
    <string name="Card8">Tulipán</string>
    <string name="Tulipanes">Tulipanes naranja y amarillo</string>
    <string name="azahar">Azahar</string>
    <string name="flor_de_naranjo">Flor de naranjo</string>
    <string name="flor_de_pascua">Flor de Pascua</string>
    <string name="flor_de_pascua2">Flor de pascua</string>
    <string name="flor_de_loto">Flor de loto</string>
    <string name="flor_de_loto2">Flor de loto</string>
    <string name="lirio_blanco">Lirio blanco</string>
    <string name="lirio">Lirio</string>
    <string name="flor_de_cosmo_violeta">Flor de cosmo violeta</string>
    <string name="flor_de_cosmo">Flor de cosmos</string>
    <string name="girasol">Girasol</string>
    <string name="girasol1">Girasol</string>
    <string name="clavel">Clavel</string>
    <string name="clavel_rojo">Clavel rojo</string>
    <string name="margarita">Margarita</string>
    <string name="margarita1">Margarita</string>
    <string name="textview">TextView</string>
    <string name="hgvhgvhgjjgghkhhhhhhhhhhvgvhk_ihhuhuiiuhuhuhuhuuihuihuihuihiioouioijiooijjoijijijoiijoijiijojoijoijijio_vgvghjhgvghhjbuhgvuhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy_hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk_mkmfldmk_mkdsksdmkksklmkmds_dlskklsksldkdl_ddsojijdsijdsklsd_jdsnjjsndjksdjksd_oidsidsjidsk_noesjdijjoidsjiisd_iojesdjifdjioif_ijoeisjoddjjioojsie_jioejijijifwjijif_ioefjjifjiewjoi_jweijijoijirijew_ijewjiojioewiojfjio_ijewfijofjioijewi_iwejofjioejoijeijoew_ojiejfiijfjwjf_jifewjifewjifjie_ewfjiijwjifi_jfewifioewfefjwijijf_jiewfijofjioijofwjifjwi_jiwejifjifwjoi_jioewfjijifji_jiwejifjiijof_ijewjifjijifejiewjifijo_dkkfjkjfs_fsg_regefdzsjkjksdkjjkssjkdskj_jkdskksflmamlkmklkmlemklsmkl_rjkefdrkjnernjnjerfnjfrejkfjk_j_fre_jkfea_kjea_jk_jkf_aej_kfae_jkfe_ja_oaj_joeo_of_j_erj_jofg_ge">hgvhgvhgjjgghkhhhhhhhhhhvgvhk ihhuhuiiuhuhuhuhuuihuihuihuihiioouioijiooijjoijijijoiijoijiijojoijoijijio vgvghjhgvghhjbuhgvuhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk hjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfkhjbuyhnjbuybynhyuhhjnhyubnijhybunhubybyuinjubyinjyubbibyiubynuiiiihugitygvy hbhbkhjknjnjjnjkjkkbkbkjjbbjkkbjbjkkbjbjkjbkkkgfk mkmfldmk mkdsksdmkksklmkmds dlskklsksldkdl ddsojijdsijdsklsd jdsnjjsndjksdjksd oidsidsjidsk noesjdijjoidsjiisd iojesdjifdjioif ijoeisjoddjjioojsie jioejijijifwjijif ioefjjifjiewjoi jweijijoijirijew ijewjiojioewiojfjio ijewfijofjioijewi iwejofjioejoijeijoew ojiejfiijfjwjf jifewjifewjifjie ewfjiijwjifi jfewifioewfefjwijijf jiewfijofjioijofwjifjwi jiwejifjifwjoi jioewfjijifji jiwejifjiijof ijewjifjijifejiewjifijo dkkfjkjfs fsg regefdzsjkjksdkjjkssjkdskj jkdskksflmamlkmklkmlemklsmkl rjkefdrkjnernjnjerfnjfrejkfjk j fre jkfea kjea jk jkf aej kfae jkfe ja oaj joeo of j erj jofg ge</string>
    <string name="o">TODO</string>
    <string name="tujardin">imagen que pone tu jardin</string>
    <string name="add">imagen que pone añadir y una hoja</string>
    <string name="nombre_de_la_planta">Nombre de la planta</string>
    <string name="descripci_n_de_la_planta">Descripción de la planta</string>
    <string name="nombre">nombre</string>
    <string name="imagen">imagen</string>
    <string name="imagen_para_seleccionar">imagen para seleccionar</string>
    <string name="descripcion">descripcion</string>
    <string name="volver">volver</string>
    <string name="aceptar">aceptar</string>
</resources>