<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E165"
    tools:context=".Add">

    <ImageView
        android:id="@+id/select"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:background="#FDFBE6"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/imagen"
        android:contentDescription="@string/imagen_para_seleccionar" />

    <ImageView
        android:id="@+id/volver"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/volverflecha"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/volver" />

    <ImageView
        android:id="@+id/aceptar"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/aceptar"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/aceptar"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="249dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:hint="@string/nombre_de_la_planta"
        android:textColor="#447349"
        android:textColorHighlight="#447349"
        android:textColorHint="#447349"
        android:textColorLink="#447349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="255dp"
        android:layout_height="56dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:hint="@string/descripci_n_de_la_planta"
        android:textColor="#447349"
        android:textColorHighlight="#447349"
        android:textColorHint="#447349"
        android:textColorLink="#447349"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select"
        app:srcCompat="@drawable/descripcion"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/descripcion" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
        app:srcCompat="@drawable/iamgenes"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/imagen" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/nombre"
        android:contentDescription="@string/nombre"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>